@@ -106,6 +106,7 @@ BookBrowser::BookBrowser(QWidget *parent)
     m_OpenWithContextMenu->addAction(m_OpenWithEditor3);
     m_OpenWithContextMenu->addAction(m_OpenWithEditor4);
     m_OpenWithContextMenu->addAction(m_OpenWithOtherApp);
+    m_OpenWithContextMenu->addSeparator();
     m_OpenWithContextMenu->addAction(m_OpenWithClear);
     
     setFocusPolicy(Qt::StrongFocus);
@@ -2068,38 +2069,38 @@ void BookBrowser::SetupTreeView()
 void BookBrowser::CreateContextMenuActions()
 {
     KeyboardShortcutManager *sm = KeyboardShortcutManager::instance();
-    m_SelectAll               = new QAction(tr("Select All"),            this);
-    m_AddNewHTML              = new QAction(tr("Add Blank HTML File"),   this);
-    m_AddNewCSS               = new QAction(tr("Add Blank Stylesheet"),  this);
-    m_AddNewJS                = new QAction(tr("Add Blank Javascript"),  this);
-    m_AddNewSVG               = new QAction(tr("Add Blank SVG Image"),   this);
-    m_AddExisting             = new QAction(tr("Add Existing Files..."), this);
-    m_CopyHTML                = new QAction(tr("Add Copy"),              this);
-    m_CopyCSS                 = new QAction(tr("Add Copy"),              this);
-    m_Rename                  = new QAction(tr("Rename") + "...",        this);
-    m_RERename                = new QAction(tr("RegEx Rename") + "...",  this);
-    m_Move                    = new QAction(tr("Move") + "...",          this);
-    m_Delete                  = new QAction(tr("Delete") + "...",        this);
-    m_CoverImage              = new QAction(tr("Cover Image"),           this);
-    m_Merge                   = new QAction(tr("Merge"),                 this);
-    m_NoObfuscationMethod     = new QAction(tr("None"),                  this);
-    m_AdobesObfuscationMethod = new QAction(tr("Use Adobe's Method"),    this);
-    m_IdpfsObfuscationMethod  = new QAction(tr("Use IDPF's Method"),     this);
-    m_SortHTML                = new QAction(tr("Sort") + "...",          this);
-    m_RenumberTOC             = new QAction(tr("Renumber TOC Entries"),  this);
-    m_LinkStylesheets         = new QAction(tr("Link Stylesheets..."),   this);
-    m_LinkJavascripts         = new QAction(tr("Link Javascripts..."),   this);
-    m_AddSemantics            = new QAction(tr("Add Semantics..."),      this);
-    m_GetInfo                 = new QAction(tr("Get Info..."),           this);
-    m_ValidateWithW3C         = new QAction(tr("Validate with W3C"),     this);
-    m_SaveAs                  = new QAction(tr("Save As") + "...",       this);
-    m_OpenWithEditor0         = new QAction("",                          this);
-    m_OpenWithEditor1         = new QAction("",                          this);
-    m_OpenWithEditor2         = new QAction("",                          this);
-    m_OpenWithEditor3         = new QAction("",                          this);
-    m_OpenWithEditor4         = new QAction("",                          this);
-    m_OpenWithOtherApp        = new QAction(tr("Other Application"),     this);
-    m_OpenWithClear           = new QAction(tr("Clear Editor List"),     this);
+    m_SelectAll               = new QAction(tr("Select All"),               this);
+    m_AddNewHTML              = new QAction(tr("Add Blank HTML File"),      this);
+    m_AddNewCSS               = new QAction(tr("Add Blank Stylesheet"),     this);
+    m_AddNewJS                = new QAction(tr("Add Blank Javascript"),     this);
+    m_AddNewSVG               = new QAction(tr("Add Blank SVG Image"),      this);
+    m_AddExisting             = new QAction(tr("Add Existing Files..."),    this);
+    m_CopyHTML                = new QAction(tr("Add Copy"),                 this);
+    m_CopyCSS                 = new QAction(tr("Add Copy"),                 this);
+    m_Rename                  = new QAction(tr("Rename") + "...",           this);
+    m_RERename                = new QAction(tr("RegEx Rename") + "...",     this);
+    m_Move                    = new QAction(tr("Move") + "...",             this);
+    m_Delete                  = new QAction(tr("Delete") + "...",           this);
+    m_CoverImage              = new QAction(tr("Cover Image"),              this);
+    m_Merge                   = new QAction(tr("Merge"),                    this);
+    m_NoObfuscationMethod     = new QAction(tr("None"),                     this);
+    m_AdobesObfuscationMethod = new QAction(tr("Use Adobe's Method"),       this);
+    m_IdpfsObfuscationMethod  = new QAction(tr("Use IDPF's Method"),        this);
+    m_SortHTML                = new QAction(tr("Sort") + "...",             this);
+    m_RenumberTOC             = new QAction(tr("Renumber TOC Entries"),     this);
+    m_LinkStylesheets         = new QAction(tr("Link Stylesheets..."),      this);
+    m_LinkJavascripts         = new QAction(tr("Link Javascripts..."),      this);
+    m_AddSemantics            = new QAction(tr("Add Semantics..."),         this);
+    m_GetInfo                 = new QAction(tr("Get Info..."),              this);
+    m_ValidateWithW3C         = new QAction(tr("Validate with W3C"),        this);
+    m_SaveAs                  = new QAction(tr("Save As") + "...",          this);
+    m_OpenWithEditor0         = new QAction("",                             this);
+    m_OpenWithEditor1         = new QAction("",                             this);
+    m_OpenWithEditor2         = new QAction("",                             this);
+    m_OpenWithEditor3         = new QAction("",                             this);
+    m_OpenWithEditor4         = new QAction("",                             this);
+    m_OpenWithOtherApp        = new QAction(tr("Other Application")+"...",  this);
+    m_OpenWithClear           = new QAction(tr("Clear Editor List"),        this);
     m_CoverImage             ->setCheckable(true);
     m_NoObfuscationMethod    ->setCheckable(true);
     m_AdobesObfuscationMethod->setCheckable(true);
